--- a/week2/L02Personal/package.json
+++ b/week2/L02Personal/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rest-practice",
   "version": "1.0.0",
-  "description": "",
+  "description": "Run npm install and npm start from the backend folder in the terminal",
   "license": "ISC",
   "author": "",
   "type": "commonjs",
@@ -11,10 +11,10 @@
     "start": "nodemon app.js"
   },
   "dependencies": {
-    "body-parser": "^1.18.3",
+    "body-parser": "^1.20.3",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
-    "mongodb": "^6.16.0"
+    "mongodb": "^4.17.2"
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
