--- a/week2/L02team/backend/package.json
+++ b/week2/L02team/backend/package.json
@@ -11,10 +11,8 @@
     "start": "nodemon app.js"
   },
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "dotenv": "^16.5.0",
-    "express": "^4.21.2",
-    "mongodb": "^6.16.0"
+    "body-parser": "^1.20.3",
+    "express": "^4.21.2"
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
