--- a/week2/L02teamStretch/backend/package.json
+++ b/week2/L02teamStretch/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rest-practice",
+  "name": "backend",
   "version": "1.0.0",
   "description": "",
   "license": "ISC",
@@ -11,12 +11,11 @@
     "start": "nodemon app.js"
   },
   "dependencies": {
-    "body-parser": "^1.18.3",
     "dotenv": "^16.5.0",
-    "express": "^4.21.2",
-    "mongodb": "^6.16.0"
+    "express": "^5.1.0"
   },
   "devDependencies": {
-    "nodemon": "^1.19.4"
+    "mongodb": "^6.16.0",
+    "nodemon": "^3.1.10"
   }
 }
